Table added for user profile

--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -16,6 +16,7 @@
         android:paddingRight="10dp"
         android:shadowColor="#000000"
         android:text="Name: "
+        android:textColor="?android:attr/textColorPrimary"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.158"
@@ -31,6 +32,7 @@
         android:gravity="center|right"
         android:paddingRight="10dp"
         android:text="Date of Birth: "
+        android:textColor="?android:attr/textColorPrimary"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/name_head"
         app:layout_constraintHorizontal_bias="0.0"
@@ -46,6 +48,7 @@
         android:gravity="center|right"
         android:paddingRight="10dp"
         android:text="Sex: "
+        android:textColor="?android:attr/textColorPrimary"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/dob_head"
         app:layout_constraintHorizontal_bias="0.0"
@@ -61,6 +64,7 @@
         android:gravity="center|right"
         android:paddingRight="10dp"
         android:text="Height (in cm):"
+        android:textColor="?android:attr/textColorPrimary"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/sex_head"
         app:layout_constraintHorizontal_bias="0.0"
@@ -76,6 +80,7 @@
         android:gravity="center|right"
         android:paddingRight="10dp"
         android:text="Weight (kg):"
+        android:textColor="?android:attr/textColorPrimary"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/height_head"
         app:layout_constraintHorizontal_bias="0.0"
@@ -93,6 +98,7 @@
         android:hint="Name"
         android:inputType="textPersonName"
         android:paddingLeft="10dp"
+        android:textColor="?android:attr/textColorPrimary"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.825"
@@ -108,6 +114,7 @@
         android:ems="10"
         android:gravity="center|left"
         android:paddingLeft="10dp"
+        android:textColor="?android:attr/textColorPrimary"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/name"
@@ -140,6 +147,7 @@
         android:hint="Height (in cm)"
         android:inputType="number"
         android:paddingLeft="10dp"
+        android:textColor="?android:attr/textColorPrimary"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/sex"
         app:layout_constraintHorizontal_bias="0.0"
@@ -157,6 +165,7 @@
         android:hint="Weight (in kg)"
         android:inputType="number"
         android:paddingLeft="10dp"
+        android:textColor="?android:attr/textColorPrimary"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/height"
         app:layout_constraintHorizontal_bias="0.0"
