--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingRight="10dp"
-    tools:context=".Profile">
+    tools:context=".activities.Profile">
 
     <TextView
         android:id="@+id/name_head"
