Extension of DatabaseHandler

--- a/app/src/main/res/layout/activity_appointment_detail.xml
+++ b/app/src/main/res/layout/activity_appointment_detail.xml
@@ -11,7 +11,7 @@
         android:id="@+id/id"
         android:layout_width="100dp"
         android:layout_height="30dp"
-        android:background="@drawable/border"
+        android:background="@drawable/border_text"
         android:gravity="center|right"
         android:paddingRight="5dp"
         android:shadowColor="#000000"
@@ -30,7 +30,7 @@
         android:id="@+id/with"
         android:layout_width="100dp"
         android:layout_height="30dp"
-        android:background="@drawable/border"
+        android:background="@drawable/border_text"
         android:gravity="center|right"
         android:paddingRight="5dp"
         android:shadowColor="#000000"
@@ -49,7 +49,7 @@
         android:id="@+id/on"
         android:layout_width="100dp"
         android:layout_height="30dp"
-        android:background="@drawable/border"
+        android:background="@drawable/border_text"
         android:gravity="center|right"
         android:paddingRight="5dp"
         android:shadowColor="#000000"
@@ -68,7 +68,7 @@
         android:id="@+id/at"
         android:layout_width="100dp"
         android:layout_height="30dp"
-        android:background="@drawable/border"
+        android:background="@drawable/border_text"
         android:gravity="center|right"
         android:paddingRight="5dp"
         android:shadowColor="#000000"
@@ -87,7 +87,7 @@
         android:id="@+id/pres_url"
         android:layout_width="100dp"
         android:layout_height="30dp"
-        android:background="@drawable/border"
+        android:background="@drawable/border_text"
         android:gravity="center|right"
         android:paddingRight="5dp"
         android:shadowColor="#000000"
@@ -106,7 +106,7 @@
         android:id="@+id/app_id"
         android:layout_width="210dp"
         android:layout_height="30dp"
-        android:background="@drawable/border"
+        android:background="@drawable/border_text"
         android:ems="10"
         android:gravity="center|left"
         android:paddingLeft="5dp"
@@ -124,7 +124,7 @@
         android:id="@+id/with_doctor"
         android:layout_width="210dp"
         android:layout_height="30dp"
-        android:background="@drawable/border"
+        android:background="@drawable/border_text"
         android:ems="10"
         android:gravity="center|left"
         android:inputType="textPersonName"
@@ -143,7 +143,7 @@
         android:id="@+id/on_date"
         android:layout_width="210dp"
         android:layout_height="30dp"
-        android:background="@drawable/border"
+        android:background="@drawable/border_text"
         android:ems="10"
         android:gravity="center|left"
         android:inputType="textPersonName"
@@ -162,7 +162,7 @@
         android:id="@+id/at_time"
         android:layout_width="210dp"
         android:layout_height="30dp"
-        android:background="@drawable/border"
+        android:background="@drawable/border_text"
         android:ems="10"
         android:gravity="center|left"
         android:inputType="textPersonName"
@@ -181,7 +181,7 @@
         android:id="@+id/pres_url1"
         android:layout_width="210dp"
         android:layout_height="30dp"
-        android:background="@drawable/border"
+        android:background="@drawable/border_text"
         android:ems="10"
         android:gravity="center|left"
         android:inputType="textPersonName"
@@ -226,6 +226,7 @@
         android:id="@+id/add_course"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:background="@drawable/border_text"
         android:text="Add Course"
         android:textAllCaps="false"
         app:backgroundTint="#D50000"
@@ -240,6 +241,7 @@
         android:id="@+id/add_report"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:background="@drawable/border_text"
         android:text="Add Report"
         android:textAllCaps="false"
         android:textColor="#FFFFFF"
@@ -254,6 +256,7 @@
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:background="@drawable/border_text"
         android:text="Appointment"
         android:textColor="?android:attr/textColorPrimary"
         android:textSize="24sp"
