--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -11,7 +11,7 @@
         android:id="@+id/name_head"
         android:layout_width="75dp"
         android:layout_height="40dp"
-        android:background="@drawable/border"
+        android:background="@drawable/border_text"
         android:gravity="center|right"
         android:paddingRight="10dp"
         android:shadowColor="#000000"
@@ -28,7 +28,7 @@
         android:id="@+id/dob_head"
         android:layout_width="75dp"
         android:layout_height="40dp"
-        android:background="@drawable/border"
+        android:background="@drawable/border_text"
         android:gravity="center|right"
         android:paddingRight="10dp"
         android:text="Date of Birth: "
@@ -44,7 +44,7 @@
         android:id="@+id/sex_head"
         android:layout_width="75dp"
         android:layout_height="40dp"
-        android:background="@drawable/border"
+        android:background="@drawable/border_text"
         android:gravity="center|right"
         android:paddingRight="10dp"
         android:text="Sex: "
@@ -60,7 +60,7 @@
         android:id="@+id/height_head"
         android:layout_width="75dp"
         android:layout_height="40dp"
-        android:background="@drawable/border"
+        android:background="@drawable/border_text"
         android:gravity="center|right"
         android:paddingRight="10dp"
         android:text="Height (in cm):"
@@ -76,7 +76,7 @@
         android:id="@+id/weight_head"
         android:layout_width="75dp"
         android:layout_height="40dp"
-        android:background="@drawable/border"
+        android:background="@drawable/border_text"
         android:gravity="center|right"
         android:paddingRight="10dp"
         android:text="Weight (kg):"
@@ -92,7 +92,7 @@
         android:id="@+id/name"
         android:layout_width="225dp"
         android:layout_height="40dp"
-        android:background="@drawable/border"
+        android:background="@drawable/border_text"
         android:ems="10"
         android:gravity="center|left"
         android:hint="Name"
@@ -110,7 +110,7 @@
         android:id="@+id/dob"
         android:layout_width="225dp"
         android:layout_height="40dp"
-        android:background="@drawable/border"
+        android:background="@drawable/border_text"
         android:ems="10"
         android:gravity="center|left"
         android:paddingLeft="10dp"
@@ -127,7 +127,7 @@
         android:id="@+id/sex"
         android:layout_width="225dp"
         android:layout_height="40dp"
-        android:background="@drawable/border"
+        android:background="@drawable/border_text"
         android:gravity="center|left"
         android:paddingLeft="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -141,7 +141,7 @@
         android:id="@+id/height"
         android:layout_width="225dp"
         android:layout_height="40dp"
-        android:background="@drawable/border"
+        android:background="@drawable/border_text"
         android:ems="10"
         android:gravity="center|left"
         android:hint="Height (in cm)"
@@ -159,7 +159,7 @@
         android:id="@+id/weight"
         android:layout_width="225dp"
         android:layout_height="40dp"
-        android:background="@drawable/border"
+        android:background="@drawable/border_text"
         android:ems="10"
         android:gravity="center|left"
         android:hint="Weight (in kg)"
@@ -177,6 +177,7 @@
         android:id="@+id/save"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:background="@drawable/border_text"
         android:text="Save"
         android:textAllCaps="false"
         app:layout_constraintBottom_toBottomOf="parent"
