--- a/app/src/main/res/layout/appointments_fragment.xml
+++ b/app/src/main/res/layout/appointments_fragment.xml
@@ -35,6 +35,6 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/recyclerView" />
+            app:layout_constraintTop_toBottomOf="@+id/recycler3" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </FrameLayout>
