ReportDetail activity completed

--- a/app/src/main/res/layout/activity_report.xml
+++ b/app/src/main/res/layout/activity_report.xml
@@ -4,15 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activities.AppointmentDetail">
-
+    tools:context=".activities.ReportDetail">
 
     <TextView
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/border_text"
-        android:text="Appointment"
+        android:text="Report Detail"
         android:textColor="?android:attr/textColorPrimary"
         android:textSize="24sp"
         android:textStyle="bold"
@@ -24,14 +23,14 @@
         app:layout_constraintVertical_bias="0.022" />
 
     <TextView
-        android:id="@+id/id"
+        android:id="@+id/pres_id_head"
         android:layout_width="100dp"
         android:layout_height="30dp"
         android:background="@drawable/border_text"
         android:gravity="center|right"
         android:paddingRight="5dp"
         android:shadowColor="#000000"
-        android:text="ID: "
+        android:text="Pres ID: "
         android:textColor="?android:attr/textColorPrimary"
         android:textSize="14sp"
         android:textStyle="bold|italic"
@@ -43,83 +42,102 @@
         app:layout_constraintVertical_bias="0.148" />
 
     <TextView
-        android:id="@+id/with"
+        android:id="@+id/report_id"
         android:layout_width="100dp"
         android:layout_height="30dp"
         android:background="@drawable/border_text"
         android:gravity="center|right"
         android:paddingRight="5dp"
         android:shadowColor="#000000"
-        android:text="With: "
+        android:text="Report ID: "
         android:textColor="?android:attr/textColorPrimary"
         android:textSize="14sp"
         android:textStyle="bold|italic"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/id"
+        app:layout_constraintEnd_toEndOf="@+id/pres_id_head"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/id"
-        app:layout_constraintTop_toBottomOf="@+id/id"
+        app:layout_constraintStart_toStartOf="@+id/pres_id_head"
+        app:layout_constraintTop_toBottomOf="@+id/pres_id_head"
         app:layout_constraintVertical_bias="0.03" />
 
     <TextView
-        android:id="@+id/on"
+        android:id="@+id/ref_by_head"
         android:layout_width="100dp"
         android:layout_height="30dp"
         android:background="@drawable/border_text"
         android:gravity="center|right"
         android:paddingRight="5dp"
         android:shadowColor="#000000"
-        android:text="On: "
+        android:text="Referred By: "
         android:textColor="?android:attr/textColorPrimary"
         android:textSize="14sp"
         android:textStyle="bold|italic"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/with"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/with"
-        app:layout_constraintTop_toBottomOf="@+id/with"
+        app:layout_constraintEnd_toEndOf="@+id/report_id"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="@+id/report_id"
+        app:layout_constraintTop_toBottomOf="@+id/report_id"
         app:layout_constraintVertical_bias="0.03" />
 
     <TextView
-        android:id="@+id/at"
+        android:id="@+id/test_head"
         android:layout_width="100dp"
         android:layout_height="30dp"
         android:background="@drawable/border_text"
         android:gravity="center|right"
         android:paddingRight="5dp"
         android:shadowColor="#000000"
-        android:text="At: "
+        android:text="Test: "
         android:textColor="?android:attr/textColorPrimary"
         android:textSize="14sp"
         android:textStyle="bold|italic"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/on"
+        app:layout_constraintEnd_toEndOf="@+id/ref_by_head"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/on"
-        app:layout_constraintTop_toBottomOf="@+id/on"
+        app:layout_constraintStart_toStartOf="@+id/ref_by_head"
+        app:layout_constraintTop_toBottomOf="@+id/ref_by_head"
         app:layout_constraintVertical_bias="0.03" />
 
     <TextView
-        android:id="@+id/pres_url"
+        android:id="@+id/remarks_head"
         android:layout_width="100dp"
         android:layout_height="30dp"
         android:background="@drawable/border_text"
         android:gravity="center|right"
         android:paddingRight="5dp"
         android:shadowColor="#000000"
-        android:text="Presc. URL: "
+        android:text="Remarks: "
         android:textColor="?android:attr/textColorPrimary"
         android:textSize="14sp"
         android:textStyle="bold|italic"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/at"
+        app:layout_constraintEnd_toEndOf="@+id/test_head"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/at"
-        app:layout_constraintTop_toBottomOf="@+id/at"
+        app:layout_constraintStart_toStartOf="@+id/test_head"
+        app:layout_constraintTop_toBottomOf="@+id/test_head"
         app:layout_constraintVertical_bias="0.03" />
 
     <TextView
-        android:id="@+id/app_id"
+        android:id="@+id/report_url_head"
+        android:layout_width="100dp"
+        android:layout_height="30dp"
+        android:background="@drawable/border_text"
+        android:gravity="center|right"
+        android:paddingRight="5dp"
+        android:shadowColor="#000000"
+        android:text="Report URL: "
+        android:textColor="?android:attr/textColorPrimary"
+        android:textSize="14sp"
+        android:textStyle="bold|italic"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/remarks_head"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/remarks_head"
+        app:layout_constraintTop_toBottomOf="@+id/remarks_head"
+        app:layout_constraintVertical_bias="0.03" />
+
+    <TextView
+        android:id="@+id/pres_id"
         android:layout_width="210dp"
         android:layout_height="30dp"
         android:background="@drawable/border_text"
@@ -129,53 +147,51 @@
         android:shadowColor="#000000"
         android:textColor="?android:attr/textColorPrimary"
         android:textSize="14sp"
-        app:layout_constraintBottom_toBottomOf="@+id/id"
+        app:layout_constraintBottom_toBottomOf="@+id/pres_id_head"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.202"
-        app:layout_constraintStart_toEndOf="@+id/id"
-        app:layout_constraintTop_toTopOf="@+id/id"
+        app:layout_constraintStart_toEndOf="@+id/pres_id_head"
+        app:layout_constraintTop_toTopOf="@+id/pres_id_head"
         app:layout_constraintVertical_bias="0.0" />
 
-    <EditText
-        android:id="@+id/with_doctor"
+    <TextView
+        android:id="@+id/repo_id"
         android:layout_width="210dp"
         android:layout_height="30dp"
         android:background="@drawable/border_text"
         android:ems="10"
         android:gravity="center|left"
-        android:inputType="textPersonName"
         android:paddingLeft="5dp"
         android:shadowColor="#000000"
         android:textColor="?android:attr/textColorPrimary"
         android:textSize="14sp"
-        app:layout_constraintBottom_toBottomOf="@+id/with"
+        app:layout_constraintBottom_toBottomOf="@+id/report_id"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.197"
-        app:layout_constraintStart_toEndOf="@+id/with"
-        app:layout_constraintTop_toTopOf="@+id/with"
+        app:layout_constraintStart_toEndOf="@+id/report_id"
+        app:layout_constraintTop_toTopOf="@+id/report_id"
         app:layout_constraintVertical_bias="0.121" />
 
     <TextView
-        android:id="@+id/on_date"
+        android:id="@+id/refer_by"
         android:layout_width="210dp"
         android:layout_height="30dp"
         android:background="@drawable/border_text"
         android:ems="10"
         android:gravity="center|left"
-        android:inputType="textPersonName"
         android:paddingLeft="5dp"
         android:shadowColor="#000000"
         android:textColor="?android:attr/textColorPrimary"
         android:textSize="14sp"
-        app:layout_constraintBottom_toBottomOf="@+id/on"
+        app:layout_constraintBottom_toBottomOf="@+id/ref_by_head"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.197"
-        app:layout_constraintStart_toEndOf="@+id/on"
-        app:layout_constraintTop_toTopOf="@+id/on"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintHorizontal_bias="0.203"
+        app:layout_constraintStart_toEndOf="@+id/ref_by_head"
+        app:layout_constraintTop_toBottomOf="@+id/report_id"
+        app:layout_constraintVertical_bias="1.0" />
 
-    <TextView
-        android:id="@+id/at_time"
+    <EditText
+        android:id="@+id/test"
         android:layout_width="210dp"
         android:layout_height="30dp"
         android:background="@drawable/border_text"
@@ -186,15 +202,15 @@
         android:shadowColor="#000000"
         android:textColor="?android:attr/textColorPrimary"
         android:textSize="14sp"
-        app:layout_constraintBottom_toBottomOf="@+id/at"
+        app:layout_constraintBottom_toBottomOf="@+id/test_head"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.197"
-        app:layout_constraintStart_toEndOf="@+id/at"
-        app:layout_constraintTop_toTopOf="@+id/at"
+        app:layout_constraintStart_toEndOf="@+id/test_head"
+        app:layout_constraintTop_toTopOf="@+id/test_head"
         app:layout_constraintVertical_bias="0.0" />
 
     <EditText
-        android:id="@+id/pres_url1"
+        android:id="@+id/remarks"
         android:layout_width="210dp"
         android:layout_height="30dp"
         android:background="@drawable/border_text"
@@ -205,28 +221,47 @@
         android:shadowColor="#000000"
         android:textColor="?android:attr/textColorPrimary"
         android:textSize="14sp"
-        app:layout_constraintBottom_toBottomOf="@+id/pres_url"
+        app:layout_constraintBottom_toBottomOf="@+id/remarks_head"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.197"
-        app:layout_constraintStart_toEndOf="@+id/pres_url"
-        app:layout_constraintTop_toTopOf="@+id/pres_url"
+        app:layout_constraintStart_toEndOf="@+id/remarks_head"
+        app:layout_constraintTop_toTopOf="@+id/remarks_head"
+        app:layout_constraintVertical_bias="0.0" />
+
+    <EditText
+        android:id="@+id/repo_url"
+        android:layout_width="210dp"
+        android:layout_height="30dp"
+        android:background="@drawable/border_text"
+        android:ems="10"
+        android:gravity="center|left"
+        android:inputType="textPersonName"
+        android:paddingLeft="5dp"
+        android:shadowColor="#000000"
+        android:textColor="?android:attr/textColorPrimary"
+        android:textSize="14sp"
+        app:layout_constraintBottom_toBottomOf="@+id/report_url_head"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.197"
+        app:layout_constraintStart_toEndOf="@+id/report_url_head"
+        app:layout_constraintTop_toTopOf="@+id/report_url_head"
         app:layout_constraintVertical_bias="1.0" />
 
     <Button
-        android:id="@+id/sav_appoint"
+        android:id="@+id/sav_repo"
         android:layout_width="44dp"
         android:layout_height="44dp"
         android:background="@drawable/check"
         app:backgroundTint="#D50000"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/pres_url1"
+        app:layout_constraintEnd_toEndOf="@+id/repo_url"
         app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="@+id/pres_url1"
-        app:layout_constraintTop_toBottomOf="@+id/pres_url1"
-        app:layout_constraintVertical_bias="0.343" />
+        app:layout_constraintStart_toStartOf="@+id/repo_url"
+        app:layout_constraintTop_toBottomOf="@+id/repo_url"
+        app:layout_constraintVertical_bias="0.299" />
 
     <Button
-        android:id="@+id/del_appoint"
+        android:id="@+id/del_repo"
         android:layout_width="44dp"
         android:layout_height="44dp"
         android:background="@drawable/cancel"
@@ -234,38 +269,8 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/pres_url"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/pres_url"
-        app:layout_constraintTop_toBottomOf="@+id/pres_url1"
-        app:layout_constraintVertical_bias="0.343" />
-
-    <Button
-        android:id="@+id/add_course"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@drawable/border_text"
-        android:text="Add Course"
-        android:textAllCaps="false"
-        app:backgroundTint="#D50000"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/sav_appoint"
-        app:layout_constraintHorizontal_bias="0.512"
-        app:layout_constraintStart_toEndOf="@+id/del_appoint"
-        app:layout_constraintTop_toBottomOf="@+id/pres_url1"
-        app:layout_constraintVertical_bias="0.526" />
-
-    <Button
-        android:id="@+id/add_report"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@drawable/border_text"
-        android:text="Add Report"
-        android:textAllCaps="false"
-        android:textColor="#FFFFFF"
-        app:backgroundTint="#D50000"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/add_course"
-        app:layout_constraintStart_toStartOf="@+id/add_course"
-        app:layout_constraintTop_toBottomOf="@+id/add_course"
-        app:layout_constraintVertical_bias="0.163" />
+        app:layout_constraintStart_toStartOf="@+id/report_url_head"
+        app:layout_constraintTop_toBottomOf="@+id/report_url_head"
+        app:layout_constraintVertical_bias="0.299" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
